# telegram-join-manager

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_from_existing.py
app/bot/: __init__.py  states.py
app/bot/handlers/: __init__.py
app/bot/handlers/admin/: __init__.py  menu.py  requests.py  welcome.py
app/bot/handlers/admin/commands/: broadcast.py  menu.py  requests.py  welcome.py
app/bot/handlers/user/: __init__.py  captcha.py  join_request.py
app/bot/handlers/user/commands/: captcha.py  join_requests.py
app/bot/keyboards/: __init__.py  inline.py  reply.py
app/bot/middlewares/: __init__.py  logging.py
app/core/: __init__.py  config.py  logger.py
app/database/: __init__.py  base.py  crud.py  migrations.py  models.py  session.py
app/services/: __init__.py  broadcast.py  broadcast_service.py  captcha.py  captcha_service.py
app/utils/: helpers.py
docs/: 01_tech_task.md  02_specification.md  admin_guide.md  architecture.md  deployment.md  glossary.md  quality_attributes.md  risks.md  sequenceDiagram.md  testing.md
tests/: test_bot_handlers.py
